# keyboim

./: Cargo.toml  build.rs
.github/workflows/: ci.yml
src/: key_hook.rs  main.rs  mouse.rs  platform.rs
