[package]
name = "keyboim"
version = "0.1.0"
edition = "2021"

[dependencies]
raw-window-handle = "0.6.2"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_LibraryLoader",
    "Win32_Globalization",
] }
winit = { version = "0.30" }
egui = "0.32"
egui-winit = "0.32"
eframe = { version = "0.32", features = ["glow"] }
indexmap = "2.11.4"
